# Dawn-Engine

./: CMakeLists.txt  README.md
cmake_modules/: FindSDL2.cmake
include/: Collision.h  Node.h  Node2D.h  Player.h  QuadTree.h  SceneTree.h  Sprite2D.h  Vector2.h  root.h
include/Example/: ExampleScene.h  Player.h
include/Nodes/: Area2D.h  CharacterBody2D.h  CollisionObject2D.h  Node.h  Node2D.h  Sprite2D.h  StaticBody2D.h
include/base/: QuadTree.h  SceneManager.h  Vector2.h  root.h
src/: Area2D.cpp  Collision.cpp  CollisionObject2D.cpp  Node.cpp  Node2D.cpp  Player.cpp  QuadTree.cpp  SceneTree.cpp  Sprite2D.cpp  StaticBody2D.cpp  Vector2.cpp  main.cpp  root.cpp
src/Example/: ExampleScene.cpp  Player.cpp
src/Nodes/: Area2D.cpp  CharacterBody2D.cpp  CollisionObject2D.cpp  Node.cpp  Node2D.cpp  Sprite2D.cpp  StaticBody2D.cpp
src/base/: QuadTree.cpp  SceneManager.cpp  Vector2.cpp  main.cpp  root.cpp
